libraries/vdifio/trunk/python/vdifio/vdifio.py

from ctypes import *

_libraries = {}
_libraries['libvdifio.so'] = CDLL('libvdifio.so')
STRING = c_char_p


VDIFHeaderPrintLevelHex = 0
VDIFHeaderPrintLevelShort = 2
VDIFHeaderPrintLevelLong = 3
VDIFHeaderPrintLevelColumns = 1
class vdif_header(Structure):
    pass
uint32_t = c_uint32
vdif_header._fields_ = [
    ('seconds', uint32_t, 30),
    ('legacymode', uint32_t, 1),
    ('invalid', uint32_t, 1),
    ('frame', uint32_t, 24),
    ('epoch', uint32_t, 6),
    ('unassigned', uint32_t, 2),
    ('framelength8', uint32_t, 24),
    ('nchan', uint32_t, 5),
    ('version', uint32_t, 3),
    ('stationid', uint32_t, 16),
    ('threadid', uint32_t, 10),
    ('nbits', uint32_t, 5),
    ('iscomplex', uint32_t, 1),
    ('extended1', uint32_t, 24),
    ('eversion', uint32_t, 8),
    ('extended2', uint32_t),
    ('extended3', uint32_t),
    ('extended4', uint32_t),
]
class vdif_edv1_header(Structure):
    pass
vdif_edv1_header._fields_ = [
    ('seconds', uint32_t, 30),
    ('legacymode', uint32_t, 1),
    ('invalid', uint32_t, 1),
    ('frame', uint32_t, 24),
    ('epoch', uint32_t, 6),
    ('unassigned', uint32_t, 2),
    ('framelength8', uint32_t, 24),
    ('nchan', uint32_t, 5),
    ('version', uint32_t, 3),
    ('stationid', uint32_t, 16),
    ('threadid', uint32_t, 10),
    ('nbits', uint32_t, 5),
    ('iscomplex', uint32_t, 1),
    ('samprate', uint32_t, 23),
    ('samprateunits', uint32_t, 1),
    ('eversion', uint32_t, 8),
    ('syncword', uint32_t),
    ('name', c_char * 8),
]
class vdif_edv2_header_generic(Structure):
    pass
vdif_edv2_header_generic._fields_ = [
    ('seconds', uint32_t, 30),
    ('legacymode', uint32_t, 1),
    ('invalid', uint32_t, 1),
    ('frame', uint32_t, 24),
    ('epoch', uint32_t, 6),
    ('unassigned', uint32_t, 2),
    ('framelength8', uint32_t, 24),
    ('nchan', uint32_t, 5),
    ('version', uint32_t, 3),
    ('stationid', uint32_t, 16),
    ('threadid', uint32_t, 10),
    ('nbits', uint32_t, 5),
    ('iscomplex', uint32_t, 1),
    ('notrelevant', uint32_t, 4),
    ('subsubversion', uint32_t, 20),
    ('eversion', uint32_t, 8),
    ('word5', uint32_t, 32),
    ('word6', uint32_t, 32),
    ('word7', uint32_t, 32),
]
class vdif_edv2_header_alma(Structure):
    pass
uint64_t = c_uint64
vdif_edv2_header_alma._fields_ = [
    ('seconds', uint32_t, 30),
    ('legacymode', uint32_t, 1),
    ('invalid', uint32_t, 1),
    ('frame', uint32_t, 24),
    ('epoch', uint32_t, 6),
    ('unassigned', uint32_t, 2),
    ('framelength8', uint32_t, 24),
    ('nchan', uint32_t, 5),
    ('version', uint32_t, 3),
    ('stationid', uint32_t, 16),
    ('threadid', uint32_t, 10),
    ('nbits', uint32_t, 5),
    ('iscomplex', uint32_t, 1),
    ('polblock', uint32_t, 1),
    ('quadrantminus1', uint32_t, 2),
    ('correlator', uint32_t, 1),
    ('subsubversion', uint32_t, 20),
    ('eversion', uint32_t, 8),
    ('picstatus', uint32_t),
    ('psn', uint64_t),
]
class vdif_edv2_header_r2dbe(Structure):
    pass
int32_t = c_int32
vdif_edv2_header_r2dbe._fields_ = [
    ('seconds', uint32_t, 30),
    ('legacymode', uint32_t, 1),
    ('invalid', uint32_t, 1),
    ('frame', uint32_t, 24),
    ('epoch', uint32_t, 6),
    ('unassigned', uint32_t, 2),
    ('framelength8', uint32_t, 24),
    ('nchan', uint32_t, 5),
    ('version', uint32_t, 3),
    ('stationid', uint32_t, 16),
    ('threadid', uint32_t, 10),
    ('nbits', uint32_t, 5),
    ('iscomplex', uint32_t, 1),
    ('polblock', uint32_t, 1),
    ('bdcsideband', uint32_t, 1),
    ('rxsideband', uint32_t, 1),
    ('undefined', uint32_t, 1),
    ('subsubversion', uint32_t, 20),
    ('eversion', uint32_t, 8),
    ('ppsdiff', int32_t, 32),
    ('psn', uint64_t),
]
class vdif_edv2_header(Structure):
    pass
vdif_edv2_header._fields_ = [
    ('seconds', uint32_t, 30),
    ('legacymode', uint32_t, 1),
    ('invalid', uint32_t, 1),
    ('frame', uint32_t, 24),
    ('epoch', uint32_t, 6),
    ('unassigned', uint32_t, 2),
    ('framelength8', uint32_t, 24),
    ('nchan', uint32_t, 5),
    ('version', uint32_t, 3),
    ('stationid', uint32_t, 16),
    ('threadid', uint32_t, 10),
    ('nbits', uint32_t, 5),
    ('iscomplex', uint32_t, 1),
    ('polblock', uint32_t, 1),
    ('quadrantminus1', uint32_t, 2),
    ('correlator', uint32_t, 1),
    ('sync', uint32_t, 20),
    ('eversion', uint32_t, 8),
    ('status', uint32_t),
    ('psn', uint64_t),
]
class vdif_edv3_header(Structure):
    pass
vdif_edv3_header._fields_ = [
    ('seconds', uint32_t, 30),
    ('legacymode', uint32_t, 1),
    ('invalid', uint32_t, 1),
    ('frame', uint32_t, 24),
    ('epoch', uint32_t, 6),
    ('unassigned', uint32_t, 2),
    ('framelength8', uint32_t, 24),
    ('nchan', uint32_t, 5),
    ('version', uint32_t, 3),
    ('stationid', uint32_t, 16),
    ('threadid', uint32_t, 10),
    ('nbits', uint32_t, 5),
    ('iscomplex', uint32_t, 1),
    ('samprate', uint32_t, 23),
    ('samprateunits', uint32_t, 1),
    ('eversion', uint32_t, 8),
    ('syncword', uint32_t),
    ('tuning', uint32_t),
    ('personalitytype', uint32_t, 8),
    ('minorrev', uint32_t, 4),
    ('majorrev', uint32_t, 4),
    ('sideband', uint32_t, 1),
    ('subband', uint32_t, 3),
    ('ifnumber', uint32_t, 4),
    ('dbeunit', uint32_t, 4),
    ('unassigned2', uint32_t, 4),
]
class vdif_edv4_header(Structure):
    pass
vdif_edv4_header._fields_ = [
    ('seconds', uint32_t, 30),
    ('legacymode', uint32_t, 1),
    ('invalid', uint32_t, 1),
    ('frame', uint32_t, 24),
    ('epoch', uint32_t, 6),
    ('unassigned', uint32_t, 2),
    ('framelength8', uint32_t, 24),
    ('nchan', uint32_t, 5),
    ('version', uint32_t, 3),
    ('stationid', uint32_t, 16),
    ('threadid', uint32_t, 10),
    ('nbits', uint32_t, 5),
    ('iscomplex', uint32_t, 1),
    ('dummy', uint32_t, 16),
    ('masklength', uint32_t, 8),
    ('eversion', uint32_t, 8),
    ('syncword', uint32_t),
    ('validitymask', uint64_t),
]
